discussion/kv_engine/134851/134851_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor KVStoreParamTest

KVStoreParamTest is locked into 1 parameter, the backend config.
To enable more KVStore test variants with more parameters, move
the code associated to 'backend' configuration to a separate
class. New parameterised test suites can now be created, using
the backend code along side there own parameters.

Change-Id: I95c81cc086b34ee005b24f4949309fca4e56f9d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-08-21 19:58:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-21 20:38:50.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25724/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25724/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3903/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:41:43: error: expected class name [clang-diagnostic-error]
class CollectionsKVStoreTestBase : public KVStoreBackend, public KVStoreTest {
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:94:17: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
                kvstore->delSystemEvent(ev);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:96:17: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
                kvstore->setSystemEvent(ev);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:166:24: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        auto dropped = kvstore->getDroppedCollections(Vbid(0));
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:220:9: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        kvstore->begin(std::make_unique<TransactionContext>(vbucket.getId()));
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:222:9: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        kvstore->commit(flush);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:223:19: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
        auto md = kvstore->getCollectionsManifest(Vbid(0));
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:243:9: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
        KVStoreBackend::setup(data_dir, GetParam());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:247:9: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
        KVStoreBackend::teardown();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:254:15: error: use of undeclared identifier "kvstore" [clang-diagnostic-error]
    auto md = kvstore->getCollectionsManifest(Vbid(0));
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:218:6: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
void KVStoreBackend::setup(const std::string& dataDir,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:259:6: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
void KVStoreBackend::teardown() {
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:268:5: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
    KVStoreBackend::setup(data_dir, GetParam());
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:271:24: error: out-of-line definition of "TearDown" does not match any declaration in "KVStoreParamTest"; did you mean "teardown"? [clang-diagnostic-error]
void KVStoreParamTest::TearDown() {
                       ^~~~~~~~
                       teardown
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:79:10: note: "teardown" declared here
    void teardown();
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:272:5: error: use of undeclared identifier "KVStoreBackend" [clang-diagnostic-error]
    KVStoreBackend::teardown();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:94:7: error: redefinition of "KVStoreParamTest" [clang-diagnostic-error]
class KVStoreParamTest : public KVStoreTest,
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:57:7: note: previous definition is here
class KVStoreParamTest : public KVStoreTest,
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.h:95:33: error: expected class name [clang-diagnostic-error]
                         public KVStoreBackend,
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3903/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:41:43:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3903/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29691/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\tests/module_tests/kvstore_test.h(52): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29691/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5118/ : FAILURE

Compile error at [2020-08-21T20:16:10.436Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5118/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5205/ : FAILURE

Compile error at [2020-08-21T20:18:38.642Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5205/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5308/ : FAILURE

Compile error at [2020-08-21T20:24:18.422Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5308/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13029/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4231/ : FAILURE

Compile error at [2020-08-21T20:16:18.270Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.h:52:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4231/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2428/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
